src/test/ui/regions/regions-close-object-into-object-3.stderr
error[E0597]: `*v` does not live long enough
  --> $DIR/regions-close-object-into-object-3.rs:11:12
   |
LL |     box B(&*v) as Box<X>
   |            ^^ borrowed value does not live long enough
LL | }
   | - borrowed value only lives until here
   |
   = note: borrowed value must be valid for the static lifetime...

error: aborting due to previous error

For more information about this error, try `rustc --explain E0597`.
